--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,18 @@ a {
 }
 button {
   user-select: none;
+  cursor: pointer;
+}
+label,
+input {
+  display: block;
 }
 input:focus,
 button:focus {
   outline: none;
+}
+h2 {
+  margin: 30px 0;
 }
 body {
   font-family: Tahoma, sans-serif;
@@ -28,15 +36,65 @@ body {
   flex-direction: column;
 }
 /* Header */
-nav {
+header {
   background-color: #fff;
   box-shadow: 0 2px 8px #ccc;
   text-align: center;
-  padding: 20px 0;
+  padding: 20px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-nav a {
+header h1 {
   color: #333;
-  font-size: 25px;
+  font-size: 35px;
+}
+@media (max-width: 767px) {
+  header h1 {
+    font-size: 30px;
+  }
+}
+@media (max-width: 576px) {
+  header {
+    flex-direction: column;
+    row-gap: 25px;
+  }
+}
+nav span.user-name {
+  margin-right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #5a5757;
+}
+nav button.logout {
+  border: none;
+  font-size: 16px;
+  padding: 10px 15px;
+  border-radius: 6px;
+  cursor: pointer;
+  background: #eee;
+  color: #5a5757;
+}
+nav ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+  column-gap: 15px;
+}
+nav ul a {
+  color: #333;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+@media (max-width: 767px) {
+  nav ul {
+    column-gap: 10px;
+  }
+  nav ul a {
+    font-size: 18px;
+  }
 }
 
 .container {
@@ -53,6 +111,45 @@ nav a {
     margin: 0 40px;
   }
 }
+
+/* Signup && Login */
+.signup-form,
+.login-form {
+  max-width: 500px;
+  background-color: #eee;
+  border-radius: 6px;
+  padding: 20px;
+  margin: 20px auto;
+}
+.signup-form label,
+.login-form label {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.signup-form input,
+.login-form input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.signup-form button,
+.login-form button {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+  background: #5a5757;
+  color: #eee;
+}
+p.error {
+  margin-top: 10px;
+  color: indianred;
+}
+
 /* Add task form */
 .add-task-form {
   padding: 20px 0;
@@ -102,7 +199,7 @@ nav a {
   padding: 20px;
   margin: 20px 0;
 }
-.tasks-list h2 {
+.tasks-list h3 {
   margin-bottom: 25px;
   user-select: none;
 }
@@ -139,22 +236,15 @@ nav a {
 }
 .tasks-list .task button {
   border: none;
-  font-size: 16px;
-  padding: 5px 10px;
-  border-radius: 6px;
   cursor: pointer;
-  color: #eee;
-  margin-right: 5px;
+  margin-right: 10px;
+  background-color: transparent;
 }
-.tasks-list .task .delete-btn {
-  background-color: #dc3545;
+.tasks-list .task button img {
+  width: 30px;
 }
-.tasks-list .task .edit-btn {
-  background-color: #0d6efd;
-}
-.task-title,
-button {
-  cursor: pointer;
+.tasks-list p {
+  font-size: 20px;
 }
 
 /* Edit task form */
@@ -203,18 +293,32 @@ button {
 .edit-task-form button {
   border: none;
   font-size: 16px;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border-radius: 6px;
   cursor: pointer;
+}
+.edit-task-form button.ok {
+  background: #5a5757;
   color: #eee;
   margin-right: 5px;
-  background-color: #0d6efd;
+}
+.edit-task-form button.cancel {
+  background: #eee;
+  color: #5a5757;
 }
 
 /* Footer */
 footer {
-  font-size: 18px;
   padding: 15px 0;
-  color: #eee;
   background-color: #333;
+  color: #eee;
+}
+footer a {
+  font-size: 18px;
+  color: #eee;
+  font-weight: bold;
+  transition: 0.3s;
+}
+footer a:hover {
+  opacity: 0.7;
 }
