--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,16 @@
 }
 a {
   text-decoration: none;
+  transition: 0.3s;
 }
 button {
   user-select: none;
   cursor: pointer;
+  transition: 0.3s;
+}
+a:hover,
+button:hover {
+  opacity: 0.8;
 }
 label,
 input {
@@ -103,6 +109,17 @@ nav ul a.signup {
     font-size: 18px;
   }
 }
+@media (max-width: 576px) {
+  nav {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 10px;
+  }
+  nav span.user-name {
+    margin-right: 0;
+  }
+}
 
 .container {
   margin: 0 100px;
@@ -115,7 +132,7 @@ nav ul a.signup {
 }
 @media (max-width: 576px) {
   .container {
-    margin: 0 40px;
+    margin: 0 30px;
   }
 }
 
@@ -123,6 +140,8 @@ nav ul a.signup {
 .signup-form + a {
   color: #128289;
   font-weight: bold;
+  margin-bottom: 10px;
+  display: block;
 }
 .signup-form,
 .login-form {
@@ -230,23 +249,22 @@ p.loading {
   color: #333;
   position: relative;
 }
-.tasks-list .task.completed::before {
-  position: absolute;
-  content: "completed!";
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.tasks-list .task .status {
+  display: none;
+}
+.tasks-list .task.completed .status {
   color: #009254;
+  display: block;
+  margin-bottom: 10px;
 }
 .tasks-list .task.completed .task-title {
   text-decoration: line-through green;
-  margin-bottom: 40px;
   opacity: 0.4;
 }
 .tasks-list .task .task-title {
   font-size: 25px;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   user-select: none;
 }
 .tasks-list .task button {
@@ -332,8 +350,4 @@ footer a {
   font-size: 18px;
   color: #eee;
   font-weight: bold;
-  transition: 0.3s;
-}
-footer a:hover {
-  opacity: 0.7;
 }
