--- a/src/index.css
+++ b/src/index.css
@@ -282,7 +282,7 @@ p.loading {
 
 /* Edit task form */
 .edit-task-form {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
